--- a/index.html
+++ b/index.html
@@ -193,10 +193,11 @@
 </script>
 <div style="text-align:center; margin-top:20px; padding:20px;">
     <p style="font-size: 0.9rem; color: #666;">＼ あわせてチェック！ ／</p>
-    <a href="mirai.html" style="text-decoration:none; background:#2e7d32; color:white; padding:12px 25px; border-radius:30px; font-weight:bold; box-shadow:0 4px 15px rgba(0,0,0,0.2); display:inline-block;">
+    <a href="https://tomitomi44.github.io/yachiyo_mirai/mirai.html" style="text-decoration:none; background:#2e7d32; color:white; padding:12px 25px; border-radius:30px; font-weight:bold; box-shadow:0 4px 15px rgba(0,0,0,0.2); display:inline-block;">
         📊 未来人口シミュレーター
     </a>
 </div>
 </body>
 
 </html>
+
