--- a/index.html
+++ b/index.html
@@ -192,9 +192,22 @@
     initQuiz();
 </script>
 
-</div>
+<div id="feedback"></div>
+    <button class="next-btn" id="next-btn" onclick="nextQuestion()">次の問題へ</button>
+
+    <hr style="margin-top: 30px; border: 0; border-top: 1px dashed #ccc;">
+
+    <div style="text-align:center; margin-top:20px;">
+        <p style="font-size: 0.8rem; color: #666; margin-bottom: 10px;">＼ もっと詳しく知る ／</p>
+        <a href="mirai.html" style="text-decoration:none; background:#2e7d32; color:white; padding:12px 20px; border-radius:30px; font-weight:bold; box-shadow:0 4px 10px rgba(0,0,0,0.2); display:inline-block; font-size: 0.9rem;">
+            📊 未来人口シミュレーター
+        </a>
+    </div>
+    </div> <script>
+    // ... JavaScriptのコード ...</div>
 </body>
 
 </html>
+
 
 
