--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>八千代町 未来へのクイズ</title>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <style>
-        :root { --primary-color: #2e7d32; --accent-color: #e91e63; --bg-color: #f1f8e9; }
+        :root { --primary-color: #2e7d32; --bg-color: #f1f8e9; }
         body { font-family: sans-serif; background-color: var(--bg-color); display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; padding: 20px; }
-        .container { background: white; width: 100%; max-width: 500px; padding: 25px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); border: 3px solid var(--primary-color); position: relative; }
+        .container { background: white; width: 100%; max-width: 500px; padding: 25px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); border: 3px solid var(--primary-color); }
         h1 { color: var(--primary-color); font-size: 1.4rem; text-align: center; border-bottom: 2px solid var(--primary-color); padding-bottom: 10px; margin-top: 0; }
         .stats { font-size: 0.9rem; text-align: right; color: #666; margin-bottom: 10px; }
         .question-text { font-size: 1.1rem; font-weight: bold; line-height: 1.6; margin-bottom: 20px; color: #333; }
@@ -18,13 +18,8 @@
         button.correct { background-color: #c8e6c9 !important; border-color: #4caf50; animation: bounce 0.5s; }
         button.wrong { background-color: #ffcdd2 !important; border-color: #f44336; }
         @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
-        #feedback { margin-top: 20px; padding: 15px; border-radius: 10px; display: none; text-align: center; font-weight: bold; border: 1px solid #ccc; background: #fafafa; }
+        #feedback { margin-top: 20px; padding: 15px; border-radius: 10px; display: none; text-align: center; font-weight: bold; font-size: 1.2rem; }
         .next-btn { display: none; width: 100%; margin-top: 20px; padding: 15px; background: var(--primary-color); color: white; border: none; border-radius: 10px; font-weight: bold; font-size: 1.1rem; cursor: pointer; }
-        
-        /* 豆知識ボックスのスタイル */
-        .mame-box { background: #fff3e0; border-left: 5px solid #ff9800; padding: 15px; margin: 20px 0; border-radius: 8px; font-size: 0.9rem; line-height: 1.5; color: #5d4037; }
-        .mame-title { font-weight: bold; color: #ef6c00; display: block; margin-bottom: 5px; }
-
         .sim-link-box { margin-top: 40px; padding-top: 20px; border-top: 2px dashed #ccc; text-align: center; }
         .sim-btn { display: inline-block; background: #1a237e; color: white; padding: 12px 25px; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
         .shogo { font-size: 2rem; margin: 10px 0; display: block; }
@@ -35,19 +30,11 @@
 <div class="container">
     <div id="quiz-ui">
         <h1>八千代町 未来へのクイズ</h1>
-        
-        <div id="mame-chishiki" class="mame-box">
-            <span class="mame-title">💡 八千代の豆知識</span>
-            <span id="mame-text">読み込み中...</span>
-        </div>
-
-        <div id="quiz-content">
-            <div class="stats" id="progress">第 1 問 / 8 問</div>
-            <div id="q-text" class="question-text"></div>
-            <div id="options" class="options"></div>
-            <div id="feedback"></div>
-            <button id="next-btn" class="next-btn" onclick="nextQuestion()">次の問題へ ▶</button>
-        </div>
+        <div class="stats" id="progress">第 1 問 / 8 問</div>
+        <div id="q-text" class="question-text"></div>
+        <div id="options" class="options"></div>
+        <div id="feedback"></div>
+        <button id="next-btn" class="next-btn" onclick="nextQuestion()">次の問題へ ▶</button>
     </div>
 
     <div class="sim-link-box">
@@ -58,34 +45,19 @@
 
 <script>
     const quizData = [
-        { q: "土師ダム周辺の桜はおよそ何本？", a: ["約3,000本", "約6,000本", "約12,000本"], c: 1, i: "6,000本の桜は圧巻です！" },
-        { q: "CHEMISTRYのメンバーで八千代町出身なのは？", a: ["堂珍 嘉邦", "川畑 要", "田丸 美寿々"], c: 0, i: "堂珍さんの美声は八千代の誇り！" },
-        { q: "ダム湖百選に選ばれた湖の名前は？", a: ["高田湖", "八千代湖", "のどごえ湖"], c: 1, i: "八千代湖、美しいですよね。" },
-        { q: "2100年の予測。八千代地区の人口は最悪何人まで減る？", a: ["約1,500人", "約2,000人", "約880人"], c: 2, i: "880人。この数字をみんなで変えましょう。" },
-        { q: "2045年の予測高齢化率は？", a: ["約35％", "約48％", "約60％"], c: 1, i: "約半分が高齢者に。支え合いが大切です。" },
-        { q: "2045年の目標達成に、毎年必要な20代の若者定住数は？", a: ["12名", "30名", "50名"], c: 0, i: "毎年12人の仲間を迎えたいですね。" },
-        { q: "2019年に入込観光客が51％増えた施設は？", a: ["美術館", "サイクリングターミナル", "八千代産直市場"], c: 2, i: "美味しいものいっぱいの産直市場！" },
-        { q: "安芸高田市が掲げる基本理念は？", a: ["若者移住最大化", "子どもたちの未来を守る", "デジタル世界一"], c: 1, i: "未来の子どもたちのために！" }
-    ];
-
-    const mameData = [
-        "八千代町の「のどごえ公園」の名前の由来は、近くにある「喉越（のどごえ）橋」からきているんだよ。",
-        "八千代湖は、西日本でも有数の「はじライディング（ボート競技）」の聖地として有名なんだって。",
-        "八千代産直市場の「かけそば」は、地元の人にも大人気の隠れた名物なんだよ。",
-        "土師ダムは、実は治水だけでなく、広島市などの水不足を救う大事な役割を持っているんだ。",
-        "八千代町の神楽は、地域ごとに伝統が受け継がれていて、秋祭りの時期は町中がにぎわうよ。",
-        "安芸高田市の中でも、八千代町は特に梨の栽培が盛んで、甘くてみずみずしいのが特徴だよ。"
+        { q: "土師ダム周辺の桜はおよそ何本？", a: ["約3,000本", "約6,000本", "約12,000本"], c: 1 },
+        { q: "CHEMISTRYのメンバーで八千代町出身なのは？", a: ["堂珍 嘉邦", "川畑 要", "田丸 美寿々"], c: 0 },
+        { q: "ダム湖百選に選ばれた湖の名前は？", a: ["高田湖", "八千代湖", "のどごえ湖"], c: 1 },
+        { q: "2100年の予測。八千代地区の人口は最悪何人まで減る？", a: ["約1,500人", "約2,000人", "約880人"], c: 2 },
+        { q: "2045年の予測高齢化率は？", a: ["約35％", "約48％", "約60％"], c: 1 },
+        { q: "2045年の目標達成に、毎年必要な20代の若者定住数は？", a: ["12名", "30名", "50名"], c: 0 },
+        { q: "2019年に入込観光客が51％増えた施設は？", a: ["美術館", "サイクリングターミナル", "八千代産直市場"], c: 2 },
+        { q: "安芸高田市が掲げる基本理念は？", a: ["若者移住最大化", "子どもたちの未来を守る", "デジタル世界一"], c: 1 }
     ];
 
     let currentQ = 0; let score = 0;
 
-    function displayMame() {
-        const randomIndex = Math.floor(Math.random() * mameData.length);
-        document.getElementById('mame-text').innerText = mameData[randomIndex];
-    }
-
     function initQuiz() {
-        displayMame(); // 豆知識を更新
         const q = quizData[currentQ];
         document.getElementById('progress').innerText = `第 ${currentQ + 1} 問 / 8 問`;
         document.getElementById('q-text').innerText = q.q;
@@ -102,11 +74,11 @@
         const f = document.getElementById('feedback');
         btns.forEach(b => b.disabled = true);
         if (idx === q.c) {
-            btns[idx].classList.add('correct'); f.innerHTML = `⭕ 正解！<br><small>${q.i}</small>`; f.style.color = "#2e7d32"; score++;
+            btns[idx].classList.add('correct'); f.innerHTML = "⭕ 正解！"; f.style.color = "#2e7d32"; score++;
             confetti({ particleCount: 100, spread: 70, origin: { y: 0.6 }, colors: ['#ffc0cb', '#ff69b4', '#ffffff'] });
         } else {
             btns[idx].classList.add('wrong'); btns[q.c].classList.add('correct');
-            f.innerHTML = `残念！<br>正解は「${q.a[q.c]}」でした。`; f.style.color = "#d32f2f";
+            f.innerHTML = `❌ 残念！ 正解は「${q.a[q.c]}」`; f.style.color = "#d32f2f";
         }
         f.style.display = 'block'; document.getElementById('next-btn').style.display = 'block';
     }
@@ -117,8 +89,7 @@
     }
 
     function showResult() {
-        displayMame(); // 最後にもう一度豆知識を更新
-        const ui = document.getElementById('quiz-content');
+        const ui = document.getElementById('quiz-ui');
         let title, comment, shogo, emoji;
         if (score <= 3) { title = "修行してきてください！"; comment = "八千代愛が足りないようです…。<br>土師ダムの桜を100回見て出直してきてください！"; shogo = "八千代ビギナー"; emoji = "🐍"; }
         else if (score <= 6) { title = "なかなかの八千代通！"; comment = "よくわかってますね！<br>産直市場の常連さんレベルです！"; shogo = "八千代の賢者"; emoji = "🌸"; }
