--- a/kagura.html
+++ b/kagura.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>八千代神楽 響奏盤</title>
+    <title>八千代 お囃子ボード</title>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <style>
         :root {
@@ -126,4 +126,5 @@
     }
 </script>
 </body>
+
 </html>
