--- a/kagura.html
+++ b/kagura.html
@@ -74,7 +74,7 @@
 <body>
 
 <div class="container">
-    <h1>八千代神楽</h1>
+    <h1>八千代 お囃子ボード</h1>
     
     <div class="board">
         <button class="inst-btn" onclick="play(100, 0.4, 'big')">
@@ -128,3 +128,4 @@
 </body>
 
 </html>
+
